@@ -9,6 +9,7 @@ import org.slf4j.LoggerFactory;
 import java.time.Duration;
 import java.util.Collections;
 import java.util.Properties;
+import java.util.List;
 
 public class HelloWorldConsumer {
 
@@ -17,31 +18,31 @@ public class HelloWorldConsumer {
   private volatile boolean keepConsuming = true;
 
   public static void main(String[] args) {
-    Properties props = new Properties();  //<1>
-    props.put("bootstrap.servers",
+    Properties kaProperties = new Properties();  //<1>
+    kaProperties.put("bootstrap.servers",
               "localhost:9092,localhost:9093,localhost:9094");
-    props.put("group.id", "helloconsumer");
-    props.put("enable.auto.commit", "true");
-    props.put("auto.commit.interval.ms", "1000");
-    props.put("key.deserializer",
+    kaProperties.put("group.id", "kinaction_helloconsumer");
+    kaProperties.put("enable.auto.commit", "true");
+    kaProperties.put("auto.commit.interval.ms", "1000");
+    kaProperties.put("key.deserializer",
               "org.apache.kafka.common.serialization.StringDeserializer");
-    props.put("value.deserializer",
+    kaProperties.put("value.deserializer",
               "org.apache.kafka.common.serialization.StringDeserializer");
 
     HelloWorldConsumer helloWorldConsumer = new HelloWorldConsumer();
-    helloWorldConsumer.consume(props);
+    helloWorldConsumer.consume(kaProperties);
     Runtime.getRuntime().addShutdownHook(new Thread(helloWorldConsumer::shutdown));
   }
 
-  private void consume(Properties props) {
-    try (KafkaConsumer<String, String> consumer = new KafkaConsumer<>(props)) {
-      consumer.subscribe(Collections.singletonList("kinaction_helloworld"));  //<2>
+  private void consume(Properties kaProperties) {
+    try (KafkaConsumer<String, String> consumer = new KafkaConsumer<>(kaProperties)) {
+      consumer.subscribe(List.of("kinaction_helloworld"));  //<2>
 
       while (keepConsuming) {
-        ConsumerRecords<String, String> records = consumer.poll(Duration.ofMillis(100));  //<3>
+        ConsumerRecords<String, String> records = consumer.poll(Duration.ofMillis(250));  //<3>
         for (ConsumerRecord<String, String> record : records) {   //<4>
-          log.info("[Consumer Record] offset = {}, key = {}, value = {}",
-                   record.offset(), record.key(), record.value());
+          log.info("kinaction_info offset = {}, kinaction_value = {}",
+                   record.offset(), record.value());
         }
       }
     }
